fix: remove extra margin

--- a/src/styles/bookList.css
+++ b/src/styles/bookList.css
@@ -1,8 +1,5 @@
 
 .book-list-wrapper{
     width:100%;
-    margin:8px;
+    padding:8px;
 }
-
-
-
